Logout added
